# SnippetGenerator

./: ComponentTypePage.cpp  ComponentTypePage.h  ConfigPage.cpp  ConfigPage.h  ConfigWidget.ui  Main.cpp  MainWindow.cpp  MainWindow.h  PluginConfigDlg.cpp  PluginConfigDlg.h  PluginConfigDlg.ui  SnippetGenerator.pro  Template.cpp  Template.h  WelcomeWidget.ui  Wizard.cpp  Wizard.h
Templates/Class/: $COMPONENT_NAME$.cc  $COMPONENT_NAME$.hh
Templates/Plugin/: CMakeLists.txt  Descriptor.json
Templates/Plugin/plugins/: $COMPONENT_NAME$.cc  $COMPONENT_NAME$.hh  $CONFIG_NAME$.asl  $CONFIG_NAME$.cc  $CONFIG_NAME$.hh  $PLUGIN_NAME$.cc  $PLUGIN_NAME$.hh  CMakeLists.txt
Templates/Plugin/widgets/: $WIDGET_NAME$.cc  $WIDGET_NAME$.hh  $WIDGET_NAME$.ui  CMakeLists.txt
Templates/Task/: $COMPONENT_NAME$.cc  $COMPONENT_NAME$.hh  $CONFIG_NAME$.asl  $CONFIG_NAME$.cc  $CONFIG_NAME$.hh  CMakeLists.txt
Templates/Test/: $COMPONENT_NAME$.cc  CMakeLists.txt
